fixed overlaping issues

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
     cursor: pointer;
     display: none;
     transition: 0.3s ease;
+    z-index: 999;
 }
 
 
@@ -50,6 +51,7 @@ header {
     flex-direction: column;
     justify-content: space-between;
     padding: 1.5em 0;
+    z-index: 999;
 }
 
 .header-one {
@@ -659,7 +661,14 @@ textarea {
     color: white;
     font-size: 1em;
     border-radius: 5px;
+    opacity: 1;
+    cursor: pointer;
     /* font-weight: 600; */
+}
+
+.button-cont button:hover {
+    background-color: var(--underLine);
+    opacity: 0.8;
 }
 
 .scrollTop {
